# tailng

./: .gitignore  LICENSE  README.md  createtestfiles.sh  follow.py  pyproject.toml
src/tailng/: __init__.py  followfile.py  follownewestfile.py
