[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tailng"
version = "0.0.1"
authors = [
  { name="Thor Dreier-Hansen", email="43479811+thordreier@users.noreply.github.com" },
]
description = "Like tail -F, but it always follow the newest file"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
tailng = "tailng.follownewestfile:main"

[project.urls]
Homepage = "https://github.com/thordreier/tailng"
Issues = "https://github.com/thordreier/tailng/issues"
